# Kandis-Advertise-Freeze

./: README.md
kandis_client/: config-overrides.js  package-lock.json  package.json
kandis_client/public/: index.html  manifest.json
kandis_client/src/: App.tsx  index.tsx  tsconfig.d.ts
kandis_client/src/assets/styles/: global.scss
kandis_client/src/components/AddBanner/: AddBanner.module.scss  AddBanner.tsx  StyledAddButton.ts
kandis_client/src/components/Banner/: Banner.module.scss  Banner.tsx
kandis_client/src/components/BannerAdmin/: BannerAdmin.module.scss  BannerAdmin.tsx
kandis_client/src/core/api/: api.ts
kandis_client/src/utils/: consts.tsx
kandis_server/: .env  .gitignore  .prettierrc  package.json
kandis_server/src/: main.ts
kandis_server/src/controllers/: admin.controller.ts  banner.controller.ts  exchangeRates.controller.ts
kandis_server/src/middlewares/: auth.middleware.ts  cache.middleware.ts
kandis_server/src/models/: AdminWallets.model.ts  Banner.model.ts
kandis_server/src/routes/: admin.routes.ts  banner.routes.ts  exchangeRates.routes.ts  index.ts
kandis_server/src/utils/: generateToken.ts  getLunaRates.ts  uploadImg.ts
nft-ad-place/: Cargo.toml  LICENSE  README.md
nft-ad-place/contracts/distribution/: Cargo.toml
nft-ad-place/contracts/distribution/src/: contract.rs  cw721_receive.rs  error.rs  i128.rs  lib.rs  nft.rs  responses.rs  state.rs
nft-ad-place/contracts/facade/: Cargo.toml
nft-ad-place/contracts/facade/src/: contract.rs  distribution.rs  error.rs  lib.rs  msg.rs  responses.rs  state.rs  tests.rs
(+160 files in other folders)
